Sat Feb 13 04:29:29 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* peropen-make.c (diskfs_make_peropen): If there is no existing
	context, then set the shadow_root iff we are a chrooted virtual
	root filesystem.

1999-02-12  Gordon Matzigkeit  <gord@trick.fig.org>

	* init-startup.c (diskfs_startup_diskfs): Release the virtual
	root's lock as soon as we've checked that it's a valid directory.
	Ignore leading slashes in _diskfs_chroot_directory.

Sun Jan 31 18:24:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* file-utimes.c (diskfs_S_file_utimes): Implement new semantics
	for setting to exactly present time.

1999-01-27  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (OTHERSRCS): Add init-main.c.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* init-main.c: New file, defining new function diskfs_init_main.
	* diskfs.h: Declare diskfs_init_main.

	* file-set-trans.c: Remove makedev, major, minor macro definitions.
	* dir-lookup.c: Likewise.

1999-01-01  Roland McGrath  <roland@baalperazim.frob.com>

	* sync-interval.c (diskfs_set_sync_interval): Use ENOMEM, not EIEIO.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	Use a struct hurd_port for the cached exec server port,
	so it is properly reference-counted and locked.
	* boot-start.c (diskfs_exec): Variable removed.
	(diskfs_start_bootstrap): Make it a local here.
	Install that port in _diskfs_exec_portcell.
	(diskfs_S_fsys_init): Use _diskfs_exec_portcell instead
	of diskfs_exec.
	* init-init.c (_diskfs_exec_portcell): New variable.
	(diskfs_init_diskfs): Initialize it.
	* priv.h: Declare it.
	* diskfs.h (diskfs_exec, diskfs_exec_ctl): Remove decls.
	* file-exec.c (diskfs_S_file_exec): Use _diskfs_exec_portcell instead
	of diskfs_exec.

	* init-completed.c: File removed (obsolete since 1996).

	* boot-start.c (diskfs_start_bootstrap): Twiddle boot-time messages.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>
