@@ -1,3 +1,8 @@
+Tue Feb 16 05:31:23 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-revoke.c: New file.
+	* Makefile (IOSRCS): Add io-revoke.c.
+
 Sat Feb 13 04:29:29 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* peropen-make.c (diskfs_make_peropen): If there is no existing
